[RELEASE] Release of t3events_course 0.1.0

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,110 @@
+2016-02-29         [RELEASE] Release of t3events_course 0.1.0 (Dirk Wenzel)
+2016-02-29 0ef9db8 [BUGFIX] configuration for coveralls corrected. (Dirk Wenzel)
+2016-02-29 b315712 [BUGFIX] build path corrected. (Dirk Wenzel)
+2016-02-29 6af9d77 [TASK] composer.json added, travis build script adapted. (Dirk Wenzel)
+2016-02-26 8a6b62b [TASK] CourseBackendController now implements FilterableControllerInterface. Default TypoScript for list action of ScheduleBackendController added. (Dirk Wenzel)
+2016-02-22 2e6adf4 [TASK] obsolete TypoScript removed, missing labels for backend added. (Dirk Wenzel)
+2016-02-21 ff87aea [TASK] Search form for modules now shows period select box only of periods are available and show a prepended option label for venue selector. Code cleanup in CourseBackendController. (Dirk Wenzel)
+2016-02-20 ca31634 [TASK] CourseBackendController->createDemandFromSettings now respects eventTypes, venues, genres and periods. Select field for audiences added to search form. Default values for periods added to module TypoScript (Dirk Wenzel)
+2016-02-20 ac39f6d [TASK] use layout Default for list view of CourseBackendController (Dirk Wenzel)
+2016-02-19 68333b4 [TASK] localized labels for backend module added. (Dirk Wenzel)
+2016-02-19 a6dc9d7 [TASK] List view of CourseBackendController now has a filter option (Dirk Wenzel)
+2016-02-19 066b808 [TASK] store demand and overwriteDemand of CourseBackendController->listAction into backend users session and settings. List action now respects a limit. (Dirk Wenzel)
+2016-02-19 9eab2e5 [TASK] localized labels for search form added (Dirk Wenzel)
+2016-02-18 d31f371 [TASK] do not rename tables anymore (Dirk Wenzel)
+2016-02-18 eff30e6 [BUGFIX] Remove legacy file (Sebastian Kreideweiß)
+2016-02-18 faef183 [TASK] re-added CourseController->listAction (Dirk Wenzel)
+2016-02-18 02be8e8 [TASK] localized labels for backend added. Display field certificate in event. (Dirk Wenzel)
+2016-02-18 2cad4cb [BUGFIX] Change BE labels for modules (Sebastian Kreideweiß)
+2016-02-18 a6053a4 [TASK] Remove unused fields document_based_registration, external_registration, registration_closed from performance (Sebastian Kreideweiß)
+2016-02-18 d421c07 [TASK] localized labels for backend added. (Dirk Wenzel)
+2016-02-18 1bfd00f [BUGFIX] error caused by wrong namespace in ScheduleDemand fixed (Dirk Wenzel)
+2016-02-18 ecb5152 [TASK] CourseController now extends AbstractController, CourseBackendController AbstractBackendController from t3events. (Dirk Wenzel)
+2016-02-06 02c78f3 [BUGFIX] field mode_instructionform renamed to mode_instruction_form (matching SQL and member variable in Course) (Dirk Wenzel)
+2016-02-04 105822f [BUGFIX] wrong use statement corrected. (Dirk Wenzel)
+2016-02-03 841bb68 [TASK] obsolete methods removed from AbstractController (Dirk Wenzel)
+2016-01-27 e0cc5b2 [TASK] obsolete unit tests removed (Dirk Wenzel)
+2016-01-27 849f3a5 [BUGFIX] Use instanceof for class comparison (Nicole Cordes)
+2016-01-26 4f51554 [TASK] Update certificate model (Vladimir Falcon)
+2016-01-26 11575b9 [TASK] Fixed Problem with the certificate model (Vladimir Falcon)
+2016-01-26 f18c007 [TASK] Add extbaseType mapping for migration (Sebastian Kreideweiß)
+2016-01-26 01f4a08 [BUGFIX] Correct sql and class member of mode_instruction_form (Sebastian Kreideweiß)
+2016-01-26 ae823bd Set constant for extbaseType in model course (Sebastian Kreideweiß)
+2016-01-26 7c5c4c9 [TASK] table configuration for performance edited: do not show a select field for course (Dirk Wenzel)
+2016-01-26 7ef1694 [BUGFIX] Remove wrong use statement to prevent fatal error (Nicole Cordes)
+2016-01-26 f775b4e [TASK] Add new properties with getters and setters (Sebastian Kreideweiß)
+2016-01-11 aa6ebe3 Rename UnitTest.xml to UnitTests.xml (Dirk Wenzel)
+2016-01-11 8ac378a Create UnitTest.xml (Dirk Wenzel)
+2016-01-11 8493f29 Delete README (Dirk Wenzel)
+2016-01-11 326f901 [TASK] configuration files for travis and coveralls added (Dirk Wenzel)
+2016-01-11 bc221a9 [TASK] field newUntil added to CourseEventTrait (Dirk Wenzel)
+2016-01-10 bf03404 [BUGFIX] property path corrected. (Dirk Wenzel)
+2016-01-10 c3183a2 [TASK] Reservation related templates removed. (Dirk Wenzel)
+2016-01-06 9335294 [TASK] CourseEventTrait implemented. (Dirk Wenzel)
+2015-12-17 26cd002 [TASK] TS configuration for backend module edited. (Dirk Wenzel)
+2015-12-16 11a5ac1 [TASK] CouseScheduleTrait implemented. Obsolete fields removed from SQL. (Dirk Wenzel)
+2015-12-15 05214a5 [TASK] TCA corrected, unit test for Schedule added. (Dirk Wenzel)
+2015-12-15 9470595 [TASK] table configuration for event edited. Extension path in localization keys corrected. (Dirk Wenzel)
+2015-12-14 bd45bbc [TASK] table configuration, TypoScript, sql and localized strings for schedule and event edited. (Dirk Wenzel)
+2015-12-09 603994c [TASK] table configuration and classes refactored, separating course and registration functionality (Dirk Wenzel)
+2015-12-07 72a76ad [TASK] Refactor dakosy_reservations to t3events_course (naming only) (Sebastian Kreideweiß)
+2015-12-07 0e0a44a [TASK] Remove targetgroup_desc and deactivate sys_cat tree fields eventcategories/branch (Sebastian Kreideweiß)
+2015-12-02 feab684 [TASK] Adapt backend form, add new columns, add language labels and sql statements for varius fields (Sebastian Kreideweiß)
+2015-11-19 597a291 [TASK] Add new field Event.newUntil (Sebastian Kreideweiß)
+2015-11-19 e03597c [TASK] Moved Event.tx_extbase_type to top of BE form (Sebastian Kreideweiß)
+
+2016-02-29         [RELEASE] Release of t3events_course 0.1.0 (Dirk Wenzel)
+2016-02-26 8a6b62b [TASK] CourseBackendController now implements FilterableControllerInterface. Default TypoScript for list action of ScheduleBackendController added. (Dirk Wenzel)
+2016-02-22 2e6adf4 [TASK] obsolete TypoScript removed, missing labels for backend added. (Dirk Wenzel)
+2016-02-21 ff87aea [TASK] Search form for modules now shows period select box only of periods are available and show a prepended option label for venue selector. Code cleanup in CourseBackendController. (Dirk Wenzel)
+2016-02-20 ca31634 [TASK] CourseBackendController->createDemandFromSettings now respects eventTypes, venues, genres and periods. Select field for audiences added to search form. Default values for periods added to module TypoScript (Dirk Wenzel)
+2016-02-20 ac39f6d [TASK] use layout Default for list view of CourseBackendController (Dirk Wenzel)
+2016-02-19 68333b4 [TASK] localized labels for backend module added. (Dirk Wenzel)
+2016-02-19 a6dc9d7 [TASK] List view of CourseBackendController now has a filter option (Dirk Wenzel)
+2016-02-19 066b808 [TASK] store demand and overwriteDemand of CourseBackendController->listAction into backend users session and settings. List action now respects a limit. (Dirk Wenzel)
+2016-02-19 9eab2e5 [TASK] localized labels for search form added (Dirk Wenzel)
+2016-02-18 d31f371 [TASK] do not rename tables anymore (Dirk Wenzel)
+2016-02-18 eff30e6 [BUGFIX] Remove legacy file (Sebastian Kreideweiß)
+2016-02-18 faef183 [TASK] re-added CourseController->listAction (Dirk Wenzel)
+2016-02-18 02be8e8 [TASK] localized labels for backend added. Display field certificate in event. (Dirk Wenzel)
+2016-02-18 2cad4cb [BUGFIX] Change BE labels for modules (Sebastian Kreideweiß)
+2016-02-18 a6053a4 [TASK] Remove unused fields document_based_registration, external_registration, registration_closed from performance (Sebastian Kreideweiß)
+2016-02-18 d421c07 [TASK] localized labels for backend added. (Dirk Wenzel)
+2016-02-18 1bfd00f [BUGFIX] error caused by wrong namespace in ScheduleDemand fixed (Dirk Wenzel)
+2016-02-18 ecb5152 [TASK] CourseController now extends AbstractController, CourseBackendController AbstractBackendController from t3events. (Dirk Wenzel)
+2016-02-06 02c78f3 [BUGFIX] field mode_instructionform renamed to mode_instruction_form (matching SQL and member variable in Course) (Dirk Wenzel)
+2016-02-04 105822f [BUGFIX] wrong use statement corrected. (Dirk Wenzel)
+2016-02-03 841bb68 [TASK] obsolete methods removed from AbstractController (Dirk Wenzel)
+2016-01-27 e0cc5b2 [TASK] obsolete unit tests removed (Dirk Wenzel)
+2016-01-27 849f3a5 [BUGFIX] Use instanceof for class comparison (Nicole Cordes)
+2016-01-26 4f51554 [TASK] Update certificate model (Vladimir Falcon)
+2016-01-26 11575b9 [TASK] Fixed Problem with the certificate model (Vladimir Falcon)
+2016-01-26 f18c007 [TASK] Add extbaseType mapping for migration (Sebastian Kreideweiß)
+2016-01-26 01f4a08 [BUGFIX] Correct sql and class member of mode_instruction_form (Sebastian Kreideweiß)
+2016-01-26 ae823bd Set constant for extbaseType in model course (Sebastian Kreideweiß)
+2016-01-26 7c5c4c9 [TASK] table configuration for performance edited: do not show a select field for course (Dirk Wenzel)
+2016-01-26 7ef1694 [BUGFIX] Remove wrong use statement to prevent fatal error (Nicole Cordes)
+2016-01-26 f775b4e [TASK] Add new properties with getters and setters (Sebastian Kreideweiß)
+2016-01-11 aa6ebe3 Rename UnitTest.xml to UnitTests.xml (Dirk Wenzel)
+2016-01-11 8ac378a Create UnitTest.xml (Dirk Wenzel)
+2016-01-11 8493f29 Delete README (Dirk Wenzel)
+2016-01-11 326f901 [TASK] configuration files for travis and coveralls added (Dirk Wenzel)
+2016-01-11 bc221a9 [TASK] field newUntil added to CourseEventTrait (Dirk Wenzel)
+2016-01-10 bf03404 [BUGFIX] property path corrected. (Dirk Wenzel)
+2016-01-10 c3183a2 [TASK] Reservation related templates removed. (Dirk Wenzel)
+2016-01-06 9335294 [TASK] CourseEventTrait implemented. (Dirk Wenzel)
+2015-12-17 26cd002 [TASK] TS configuration for backend module edited. (Dirk Wenzel)
+2015-12-16 11a5ac1 [TASK] CouseScheduleTrait implemented. Obsolete fields removed from SQL. (Dirk Wenzel)
+2015-12-15 05214a5 [TASK] TCA corrected, unit test for Schedule added. (Dirk Wenzel)
+2015-12-15 9470595 [TASK] table configuration for event edited. Extension path in localization keys corrected. (Dirk Wenzel)
+2015-12-14 bd45bbc [TASK] table configuration, TypoScript, sql and localized strings for schedule and event edited. (Dirk Wenzel)
+2015-12-09 603994c [TASK] table configuration and classes refactored, separating course and registration functionality (Dirk Wenzel)
+2015-12-07 72a76ad [TASK] Refactor dakosy_reservations to t3events_course (naming only) (Sebastian Kreideweiß)
+2015-12-07 0e0a44a [TASK] Remove targetgroup_desc and deactivate sys_cat tree fields eventcategories/branch (Sebastian Kreideweiß)
+2015-12-02 feab684 [TASK] Adapt backend form, add new columns, add language labels and sql statements for varius fields (Sebastian Kreideweiß)
+2015-11-19 597a291 [TASK] Add new field Event.newUntil (Sebastian Kreideweiß)
+2015-11-19 e03597c [TASK] Moved Event.tx_extbase_type to top of BE form (Sebastian Kreideweiß)
+
 2015-07-23         [RELEASE] Release of dakosy_reservations 1.3.3 (Dirk Wenzel)
 2015-07-23 4b2094a [BUGFIX] remove participants from lesson and from repository when removing incomplete reservations. (Dirk Wenzel)
 
