--- a/Resources/Private/Language/de.locallang.xlf
+++ b/Resources/Private/Language/de.locallang.xlf
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes" ?>
 <xliff version="1.0">
-	<file source-language="en" target-language="de" datatype="plaintext" original="messages" date="2016-02-19T19:36:59Z">
+	<file source-language="en" target-language="de" datatype="plaintext" original="messages" date="2016-06-06T16:29:29Z">
 		<header>
 			<generator>LFEditor</generator>
 		</header>
 		<body>
+		<trans-unit id="button.addCourse" approved="yes" xml:space="preserve">
+			<source>Add Course</source>
+			<target>Kurs hinzufügen</target>
+		</trans-unit>
 		<trans-unit id="button.applyFilter" approved="yes" xml:space="preserve">
 			<source>apply filter</source>
 			<target>Filter anwenden</target>
