--- a/Resources/Private/Language/de.locallang_m4.xlf
+++ b/Resources/Private/Language/de.locallang_m4.xlf
@@ -11,7 +11,7 @@
 		</trans-unit>
 		<trans-unit id="mlang_tabs_tab" approved="yes" xml:space="preserve">
 			<source>Courses</source>
-			<target>Veranstaltungen</target>
+			<target>Kurse</target>
 		</trans-unit>
 		</body>
 	</file>
