--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2016-08-12         [RELEASE] Release of t3events_course 0.5.0 (Dirk Wenzel)
+2016-07-20 6efeebd [TASK] markup for records listing in BE module improved. Usage of search form partial normalized. (Dirk Wenzel)
+
 2016-07-12         [RELEASE] Release of t3events_course 0.4.0 (Dirk Wenzel)
 2016-07-12 11e4a11 [TASK] obsolete asset removed. (Dirk Wenzel)
 2016-07-08 52de9ef [BUGFIX] legacy TypoScript constants corrected. (Dirk Wenzel)
