[RELEASE] Release of t3events_course 0.7.0 (Dirk Wenzel)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,32 @@
+2016-12-14         [RELEASE] Release of t3events_course 0.7.0 (Dirk Wenzel)
+2016-12-01 1975c9f [TASK] class constant EXTENSION_KEY and localized strings added. (Dirk Wenzel)
+2016-11-13 8cac7bb [TASK] Invalid argument renderMode removed from flashMessages view helper (Dirk Wenzel)
+2016-11-04 fbde533 [BUGFIX] correct visibility of method ScheduleRepository->createConstraintsFromDemand (Dirk Wenzel)
+2016-10-30 353151b travis-ci configuration: split codecov.io file detection for functional and unit tests (Dirk Wenzel)
+2016-10-30 850ef2e [TASK] travis-ci configuration: codecov.io file pattern for functional test changed (Dirk Wenzel)
+2016-10-30 6c90ee4 [TASK] View helpers removed. (Dirk Wenzel)
+2016-10-29 740859d [TASK] Hook ItemsProcFunc now extends class from t3events. (Dirk Wenzel)
+2016-10-29 748c184 [TASK] ScheduleRepositoryTrait implemented. ScheduleDemandFactory now sets deadLineAfter if hideAfterDeadline is set. ScheduleController refactored using traits. (Dirk Wenzel)
+2016-10-29 f9cf5f9 [BUGFIX] pass correct settings to getFilterOptions and set default filter options. (Dirk Wenzel)
+2016-10-29 09e24bd [TASK] CourseController refactored using FilterableControllerTrait. Constructor now sets namespace. Unit tests for CourseController added. (Dirk Wenzel)
+2016-10-29 4066697 [TASK] plugin flex form edited. Missing language keys corrected. Template Course/List edited: obsolete keys removed, invalid argument 'renderMode' removed from flashMessages view helper. (Dirk Wenzel)
+2016-10-28 7ffb2e4 [TASK] CourseRepositoryTrait implemented. CourseController refactored using traits. Unit tests for CourseController added. (Dirk Wenzel)
+2016-10-28 f762e15 [TASK] CourseDemandFactoryTrait, ScheduleDemandFactoryTrait, CourseDemandFactory and ScheduleDemandFactory implemented. CourseBackendController refactored using CourseDemandFactoryTrait. Unit tests for CourseBackendController added. (Dirk Wenzel)
+2016-10-28 daf2647 [TASK] unit tests for ScheduleBackendController added. (Dirk Wenzel)
+2016-10-28 7df1e79 [TASK] travis-ci configuration: diminish clone depth. (Dirk Wenzel)
+2016-10-28 bece202 [TASK] missing methods for CourseEventTrait implemented. Unit tests for CourseEventTrait, ScheduleDemand and Certificate added. (Dirk Wenzel)
+2016-10-28 1e048f2 [TASK] travis-ci configuration: generate coverage report for functional tests too, call codecov.io script after success. (Dirk Wenzel)
+2016-10-28 4ad10f2 [BUGFIX] require TYPO3 < 8.4 - currently the query parser generates invalid joins when more then one constraint is added. (Dirk Wenzel)
+2016-10-27 ce2af38 [TASK] obsolete fields removed from Course, Schedule and ScheduleDemand. Obsolete code in ScheduleRepository removed. Functional test fixed. (Dirk Wenzel)
+2016-10-26 48156df [BUGFIX] table configuration: default values for text fields added. (Dirk Wenzel)
+2016-10-26 f7763f1 [BUGFIX] missing field definition for 'tx_t3events_domain_model_performance.status_info' added (Dirk Wenzel)
+2016-10-26 62709b4 [BUGFIX] travis-ci: prefer source for typo3/cms (Dirk Wenzel)
+2016-10-26 5001f39 [TASK] functional test for ScheduleRepository added. (Dirk Wenzel)
+2016-10-25 0549d0d [TASK] allow TYPO3 version 8 (Dirk Wenzel)
+2016-10-25 06a1738 [TASK] travis configuration: fix error which prevented from running unit tests without coverage. Test TYPO3 version 8 too. (Dirk Wenzel)
+2016-10-25 23ab1fa [TASK] unit tests for Course and CourseEventTrait added. Initialize property CourseEventTrait->certificate with new ObjectStorage too. (Dirk Wenzel)
+2016-10-09 66d343b [TASK] method createConstraintsFromDemand is now public (Dirk Wenzel)
+
 2016-10-11         [RELEASE] Release of t3events_course 0.6.0 (Dirk Wenzel)
 2016-10-05 102ea04 [TASK] code style improved (Dirk Wenzel)
 2016-10-03 c71e37a [TASK] code style improved. (Dirk Wenzel)
