[RELEASE] Release of t3events_course 0.8.0 (Dirk Wenzel)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2017-08-02         [RELEASE] Release of t3events_course 0.8.0 (Dirk Wenzel)
+2017-04-25 d1442f0 [BUGFIX] save unit test coverage file in folder .Build/log/coverage/Unit (Dirk Wenzel)
+2017-04-25 8c6f708 [TASK] travis-ci: use custom UnitTests.xml instead of those from testing frame work (Dirk Wenzel)
+2017-04-19 6bae961 [BUGFIX] travis-ci: fix path of configuration file for functional tests (Dirk Wenzel)
+2017-04-19 a0d0966 [TASK] allow TYPO3 8.7.x (Dirk Wenzel)
+2017-04-19 cd297bf [TASK] use nimut/testing-framework, drop coveralls reports (Dirk Wenzel)
+2017-03-07 57edd6e [TASK] require-dev phpunit/phpunit:<=4.8.0,<5.4 (Dirk Wenzel)
+2017-01-17 8f563f8 [TASK] composer.json: restore preferred-install 'source' for typo3/cms (functional test class does not exist in dist) (Dirk Wenzel)
+2017-01-17 52004ac [TASK] composer.json updated. Obsolete package mikey179/vfsStream removed, typo3/cms-core replaced by typo3/cms (Dirk Wenzel)
+2017-01-17 5a705b3 [TASK] SVG icons for backend modules added. (Dirk Wenzel)
+
 2017-01-05         [RELEASE] Release of t3events_course 0.7.1 (Dirk Wenzel)
 2016-12-30 31cd59c [TASK] deprecated settings replaced in table configuration (Dirk Wenzel)
 2016-12-30 0662cb3 [TASK] deprecated settings replaced in table configuration. Made configuration of of TCA wizards compatible with TYPO3 version 6.2 and newer. (Dirk Wenzel)
