[RELEASE] Release of t3events_course 0.9.0 (Dirk Wenzel)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+2018-06-27         [RELEASE] Release of t3events_course 0.9.0 (Dirk Wenzel)
+2018-06-27 8fb3563 [BUGFIX] fixed error in controllers caused by invalid count() usage (under PHP 7.2) (Dirk Wenzel)
+2018-06-27 8e814dc [BUGFIX] property extbaseType removed from CourseEventTrait. This avoids collision under PHP 7.2 (Dirk Wenzel)
+2018-06-27 7a9bc67 [BUGFIX] failing unit tests fixed. (Dirk Wenzel)
+2018-06-27 0ac0238 [BUGFIX] fix unit test for ScheduleDemandFactory - matcher for DateTimeObjects respects microseconds (Dirk Wenzel)
+2018-06-27 e4465ed [BUGFIX] require-dev nimut/testing-framework:^3.0 (Dirk Wenzel)
+2018-06-23 a59bf4d [TASK] require typo3/cms-core:>=8.7.0,<=8.7.99 and dwenzel/t3events:^0.39 (Support for TYPO3 version 6.2 and 7.6 dropped by required extension t3events) - travis CI build matrix adapted (Dirk Wenzel)
+2018-06-23 1f96a5b [TASK] ScheduleBackendController now uses a BackendTemplateView (Dirk Wenzel)
+2018-06-21 13e8d08 [TASK] require typo3/cms-core instead of deprecated package typo3/cms (Dirk Wenzel)
+2018-06-19 558e520 [BUGFIX] fixed errors caused by missing module name for backend links and invalid attribute renderMode in flash messages viewhelper (Dirk Wenzel)
+2018-06-19 8974d81 [TASK] use base class from testing framework for functional tests (Dirk Wenzel)
+2018-06-19 575c5e3 [BUGFIX] fix error caused by missing method emitSignal in CourseBackendController (Dirk Wenzel)
+
 2017-08-02         [RELEASE] Release of t3events_course 0.8.0 (Dirk Wenzel)
 2017-04-25 d1442f0 [BUGFIX] save unit test coverage file in folder .Build/log/coverage/Unit (Dirk Wenzel)
 2017-04-25 8c6f708 [TASK] travis-ci: use custom UnitTests.xml instead of those from testing frame work (Dirk Wenzel)
