--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2019-08-14         [RELEASE] Release of t3events_course 0.11.0 (Dirk Wenzel)
+2019-08-14 ed032f3 [CI] require nimut/testing-framework: ^3.0 || ^4.0 (Dirk Wenzel)
+2019-08-14 82a8257 [CI] include mysql service (Dirk Wenzel)
+2019-08-14 1662114 [TASK] dependencies updated - support for PHP < 7.2 dropped - allow TYPO3 8 and 9 (Dirk Wenzel)
+2019-08-14 1814311 [TASK] require dwenzel/t3extension-tools:~1.3 (Dirk Wenzel)
+2019-08-13 cf38ceb [TASK] extension configuration refactored - require dwenzel/t3events:~1.1 - require dwenzel/t3extension-tools:~1.2 (Dirk Wenzel)
+2019-08-13 b849472 [TASK] use canonical name of main module for registration (Dirk Wenzel)
+
 2018-09-07         [RELEASE] Release of t3events_course 0.10.0 (Dirk Wenzel)
 2018-07-06 4a38caa [TASK] CI: use typo3/minimal instead of typo3/core (Dirk Wenzel)
 2018-07-06 dadacf9 [TASK] require dwenzel/t3events:>=0.40 (Dirk Wenzel)
